--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
     </nav>
   </header>
 
-  <!-- HEADER -->
-  <div class="jumbotron rosso">jumbotron</div>
+  <!-- JUMBOTRON -->
+  <div class="jumbotron acqua paddingtanto">
+    <div class="container text-center">
+        <img id="avatar" src="img/avatar.svg" alt="Avatar">
+        <h1 class="paddingpoco">START BOOTSTRAP</h1>
+        <div class="paddingpoco">--- stella ---</div>
+        <p class="paddingpoco">GRAPHIC ARTIST - WEB DESIGNER -ILLUSTRATOR </p>
+    </div>
+  </div>
     
   <main>
     <!-- PORTFOLIO -->
