--- a/index.html
+++ b/index.html
@@ -34,37 +34,49 @@
         <img id="avatar" src="img/avatar.svg" alt="Avatar">
         <h1 class="paddingpoco">START BOOTSTRAP</h1>
         <div class="paddingpoco">--- stella ---</div>
-        <p class="paddingpoco">GRAPHIC ARTIST - WEB DESIGNER -ILLUSTRATOR </p>
+        <h3 class="paddingpoco">GRAPHIC ARTIST - WEB DESIGNER -ILLUSTRATOR </h3>
     </div>
   </div>
     
   <main>
     <!-- PORTFOLIO -->
-    <section id="portfolio" class="rosso h300">
+    <section id="portfolio" class="h300 paddingtanto">
       <div class="container text-center">
-        <h1>Portfolio</h1>
-        <div>--- stella ---</div>
+        <h1 class="paddingpoco">Portfolio</h1>
+        <div class="paddingpoco">--- stella ---</div>
       </div>
       <!-- CARD -->
       <div class="container">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
-            <div class="col rosso">
-              <div class="sc-card rosso">1</div>
+            <div class="col paddingpoco">
+              <div class="card rosa">
+                <img src="img/cabin.png" alt="">
+              </div>
             </div>
-            <div class="col rosso">
-              <div class="sc-card rosso">2</div>
+            <div class="col paddingpoco">
+              <div class="card az">
+                <img src="img/cake.png" alt="">
+              </div>
             </div>
-            <div class="col rosso">
-              <div class="sc-card rosso">3</div>
+            <div class="col paddingpoco">
+              <div class="card nero">
+                <img src="img/circus.png" alt="">
+              </div>
             </div>
-            <div class="col rosso">
-              <div class="sc-card rosso">4</div>
+            <div class="col paddingpoco">
+              <div class="card bluc">
+                <img src="img/game.png" alt="">
+              </div>
             </div>
-            <div class="col rosso">
-              <div class="sc-card rosso">5</div>
+            <div class="col paddingpoco">
+              <div class="card blu">
+                <img src="img/safe.png" alt="">
+              </div>
             </div>
-            <div class="col rosso">
-              <div class="sc-card rosso">6</div>
+            <div class="col paddingpoco">
+              <div class="card nocciola">
+                <img src="img/submarine.png" alt="">
+              </div>
             </div>
         </div>
       </div>
