--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Bootstrap</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.css' integrity='sha512-M9yHeAbo9J8KSZVvOi5PEo4WrL6LWxbS+cvh6faIEPPqHQXhxilgCSJ/L2tTqRf73GmI4+tNy8OWSsQuwXc4fw==' crossorigin='anonymous'/>
 </head>
 
 <body>
@@ -33,7 +34,15 @@
     <div class="container text-center">
         <img id="avatar" src="img/avatar.svg" alt="Avatar">
         <h1 class="paddingpoco">START BOOTSTRAP</h1>
-        <div class="paddingpoco">--- stella ---</div>
+        <div class="paddingpoco">
+            <div class="icons container-fluid d-flex justify-content-center align-items-center">
+            <span class="stella-line" ></span>
+            <svg class="stella-svg" xmlns="http://www.w3.org/2000/svg" width="30" height="36" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+            <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+            </svg>
+          <span class="stella-line" ></span>
+          </div>
+        </div>
         <h3 class="paddingpoco">GRAPHIC ARTIST - WEB DESIGNER -ILLUSTRATOR </h3>
     </div>
   </div>
@@ -43,7 +52,15 @@
     <section id="portfolio" class="h300 paddingtanto">
       <div class="container text-center">
         <h1 class="paddingpoco">Portfolio</h1>
-        <div class="paddingpoco">--- stella ---</div>
+        <div class="paddingpoco">
+          <div class="icons container-fluid d-flex justify-content-center align-items-center">
+          <span class="stella-line black" ></span>
+          <svg class="stella-svg black" xmlns="http://www.w3.org/2000/svg" width="30" height="36" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+          <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+          </svg>
+        <span class="stella-line black" ></span>
+        </div>
+      </div>
       </div>
       <!-- CARD -->
       <div class="container">
@@ -85,18 +102,30 @@
     
 
     <!-- ABOUT -->
-    <section id="about" class="rosso h300">
-      <div class="container text-center">
+    <section id="about" class="acqua h300 paddingtanto">
+      <div class="container text-center paddingpoco">
         <h1>About</h1>
-        <div>--- stella ---</div>
+        <div class="paddingpoco">
+          <div class="icons container-fluid d-flex justify-content-center align-items-center">
+          <span class="stella-line" ></span>
+          <svg class="stella-svg" xmlns="http://www.w3.org/2000/svg" width="30" height="36" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+          <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+          </svg>
+        <span class="stella-line" ></span>
+        </div>
       </div>
-      <div class="w60 rosso">
+      </div>
+      <div class="w60 paddingpoco">
         <div class="container-fluid">
           <div class="row row-cols-1 row-cols-md-2">
             <div class="col">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi culpa soluta nobis eos repellendus, fuga voluptatibus deleniti minima velit? Molestias sint minima sapiente rem dolorem consequuntur mollitia, praesentium ad aut?</div>
             <div class="col">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi culpa soluta nobis eos repellendus, fuga voluptatibus deleniti minima velit? Molestias sint minima sapiente rem dolorem consequuntur mollitia, praesentium ad aut?</div>
           </div>
         </div>
+      </div>
+      <div class="container text-center">
+        <button id="download" type="button" class="btn btn-light"><i class="fas fa-download"></i> Download</button>
+        
       </div>
     </section>
 
