--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <li>CONTACT</li>
           </ol>
         </div>
-        <div class="col-2 text-end d-md-none">H</div>
+        <div class="col-2 text-end d-md-none">
+          <i id="hamburger" class="fa-solid fa-bars"></i></div>
       </div>
     </nav>
   </header>
@@ -174,12 +175,12 @@
   <!-- FOOTER -->
   <footer  class="text-center prefoot">
     <div class="container prefoot paddingpoco">
-      <div class="row row-cols-1 row-cols-md-3 justify-content-between align-items-center">
-        <div class="col">
+      <div class="row row-cols-1 row-cols-md-3 justify-content-between">
+        <div class="col prefo">
           <h3>LOCATION</h3>
           <p class="paddingpoco">Piazzia Duomo, Milano 20015</p>
         </div>
-        <div class="col">
+        <div class="col prefo">
           <h3>AROUND THE WEB</h3>
           <ol class="paddingpoco">
             <li><i class="fa-brands fa-facebook-f"></i> </li>
@@ -188,7 +189,7 @@
             <li><i class="fa-brands fa-linkedin-in"></i></li>
           </ol>
         </div>
-        <div class="col">
+        <div class="col prefo">
           <h3>ABOUT FREELANCER</h3>
           <p class="paddingpoco">Is an Open Source Servise, <a id="startnow" href="#"> Start NOW</a></p>
         </div>
